--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,7 @@
 {
   "name": "SpendTrail",
   "short_name": "SpendTrail",
+  "version": "2.0",
   "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#121212",
